# ec2fleetd

./: .gitignore  README.md  pyproject.toml
doc/: macros.md  perms.md  tags.md
doc/samples/: ec2fleetd.jsonc
src/ec2fleetd/: __init__.py  __main__.py  aws.py  exceptions.py  magic.py
systemd/: ec2fleetd.service  ec2fleetd@.service
test/: Makefile  domains  dump-1.sh  ec2fleetd-test.sh  overview.md  rrs  suites.md
test/suites/1/: userdata-a.jsonc  userdata-b.jsonc
test/suites/2/: userdata-a.jsonc  userdata-b.jsonc  userdata-c.jsonc
test/suites/3/: userdata-a.jsonc
